media/prowlarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  hostnames:
    - prowlarr.ant-podz.xyz
  parentRefs:
    - name: traefik-production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: prowlarr
          port: 9696
