media/prowlarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress-route
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.192.168.86.2.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: prowlarr
          port: 9696
